tweak styles, allow pinch-zoom on canvas, drawing fixes
center the canvas
make the background a light grey
out of bounds drawing doesn't wrap to the other side anymore
using pointer capture to always get the pointer up event

--- a/style.css
+++ b/style.css
@@ -9,4 +9,10 @@ two-bit-drawing {
     border-bottom-right-radius: var(--big-radius);
     width: var(--base-width);
     height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+body {
+    background-color: #f7f7f7;
 }
